<resources>
    <string name="app_name">CABMATES</string>
    <string name="Welcome">Looking for Cabmates??</string>
    <string name="Welcome2">You are at the right place!!</string>

    <string name="enter_email">Your email-id here</string>
    <string name="email_hint">eg: abcd1234@gmail.com</string>
    <string name="enter_pswd">Enter password here</string>
    <string name="pswd_hint">eg: 1234abcd</string>

    <string name="signup">Create new account</string>
    <string name="hintemail">user@gmail.com</string>
    <string name="hintpassword">1234abcd</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="OTP">Get Otp</string>
    <string name="OTPenter">OTP here</string>
    <string name="Verify">Verify and login</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="back">Back</string>

    <string name="grp1">Available groups</string>

    <string-array name="Fromwhere">
        <item>Select</item>
        <item>Sector-62,JIIT</item>
        <item>Sector-128,JIIT</item>
    </string-array>

    <string-array name="Timeslot">
        <item>Select</item>
        <item>9:00 to 9:55</item>
        <item>9:55 to 10:50</item>
        <item>10:50 to 11:40</item>
        <item>11:45 to 12:35</item>
        <item>12:40 to 1:30</item>
        <item>1:35 to 2:25</item>
        <item>2:30 to 3:20</item>
        <item>3:25 to 4:15</item>
        <item>4:20to 5:10</item>

    </string-array>

    <string-array name="need">
        <item>Select</item>
        <item>One more</item>
        <item>Two more</item>
        <item>Three more</item>
    </string-array>


    <string name="title_activity_main6">Main6Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">My Profile</string>
    <string name="menu_editprofile">Edit Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_main5">Main5Activity</string>


</resources>
